@@ -4,6 +4,6 @@
 /* Keep track of the version. */
 #define MAJOR 0
 #define MINOR 5
-#define PATCH 5
+#define PATCH 6
 
 #endif
